--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,13 +27,15 @@ jobs:
       - name: Archive
         uses: actions/upload-artifact@v3
         with:
-          name: iptv-archive
+          name: iptv
           path: ./iptv
 
   publish:
     runs-on: ubuntu-latest
     needs: [iptv]
     steps:
+      - uses: actions/checkout@v3
+
       - name: Download all artifacts
         uses: actions/download-artifact@v3
 
