--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,6 +39,9 @@ jobs:
       - name: Download all artifacts
         uses: actions/download-artifact@v3
 
+      - name: Generate index
+        runs: python ./script/generate_html.py
+
       - name: Publish to Pages
         uses: JamesIves/github-pages-deploy-action@v4.3.3
         with:
