--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Download & transform IPTV playlist
+      - name: Download & generate IPTV playlist
         run: bash ./script/generate_iptv.sh
 
       - name: Archive
@@ -38,13 +38,16 @@ jobs:
 
       - name: Download all artifacts
         uses: actions/download-artifact@v3
+        with:
+          path: ./publish
 
       - name: Generate index
-        run: python ./script/generate_html.py
+        run: python ./script/generate_html.py ./publish
 
       - name: Publish to Pages
         uses: JamesIves/github-pages-deploy-action@v4.3.3
         with:
-          folder: ./
+          folder: ./publish
+          clean: true
           branch: gh-pages
 
